// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "calc(100vh - 6rem)",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="iot--card-editor"
      >
        <div
          className="iot--card-editor--header"
        >
          <button
            className="gallery-button iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Add card
            <svg
              aria-hidden={true}
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v2H2V2h2zm1-1H1v4h4V1zM9 2v2H7V2h2zm1-1H6v4h4V1zM14 2v2h-2V2h2zm1-1h-4v4h4V1zM4 7v2H2V7h2zm1-1H1v4h4V6zM9 7v2H7V7h2zm1-1H6v4h4V6zM14 7v2h-2V7h2zm1-1h-4v4h4V6zM4 12v2H2v-2h2zm1-1H1v4h4v-4zM9 12v2H7v-2h2zm1-1H6v4h4v-4zM14 12v2h-2v-2h2zm1-1h-4v4h4v-4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="iot--card-editor--content"
        >
          <div
            className="iot--card-edit-form"
          >
            <div
              className="bx--tabs"
              role="navigation"
              selected={0}
            >
              <div
                aria-label="listbox"
                className="bx--tabs-trigger"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="listbox"
                tabIndex={0}
              >
                <a
                  className="bx--tabs-trigger-text"
                  href="#"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  Content
                </a>
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    show menu options
                  </title>
                </svg>
              </div>
              <ul
                className="bx--tabs__nav bx--tabs__nav--hidden"
                role="tablist"
              >
                <li
                  aria-controls="undefined__panel"
                  aria-selected={true}
                  className="bx--tabs__nav-item bx--tabs__nav-item--selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={0}
                  >
                    Content
                  </a>
                </li>
                <li
                  aria-controls="undefined__panel"
                  aria-selected={false}
                  className="bx--tabs__nav-item"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={-1}
                  >
                    Settings
                  </a>
                </li>
              </ul>
            </div>
            <div
              aria-hidden={false}
              className="bx--tab-content"
              hidden={false}
              role="tabpanel"
              selected={true}
            >
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="calculated_title"
                  >
                    Card title
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="calculated_title"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                        value="Calculated"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item"
                >
                  <label
                    className="bx--label"
                    htmlFor="calculated_description"
                  >
                    Description (Optional)
                  </label>
                  <div
                    className="bx--text-area__wrapper"
                    data-invalid={null}
                  >
                    <textarea
                      aria-describedby={null}
                      aria-invalid={null}
                      className="bx--text-area bx--text-area--light"
                      cols={50}
                      disabled={false}
                      id="calculated_description"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder=""
                      rows={4}
                    />
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--dropdown__wrapper bx--list-box__wrapper"
                >
                  <label
                    className="bx--label"
                    htmlFor="downshift-0-toggle-button"
                    id="downshift-0-label"
                  >
                    Size
                  </label>
                  <div
                    className="bx--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                    id="calculated_size"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    <button
                      aria-disabled={false}
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-0-label downshift-0-toggle-button"
                      className="bx--list-box__field"
                      disabled={false}
                      id="downshift-0-toggle-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      <span
                        className="bx--list-box__label"
                      >
                        Medium thin (4x2)
                      </span>
                      <div
                        className="bx--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height={16}
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <div
                      aria-labelledby="downshift-0-label"
                      className="bx--list-box__menu"
                      id="downshift-0-menu"
                      onBlur={[Function]}
                      onKeyDown={[Function]}
                      onMouseLeave={[Function]}
                      role="listbox"
                      tabIndex={-1}
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-hidden={true}
              className="bx--tab-content"
              hidden={true}
              role="tabpanel"
              selected={false}
            >
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="calculated_title"
                  >
                    X-axis label
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="calculated_title"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="calculated_y-axis-label"
                  >
                    Y-axis label
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="calculated_y-axis-label"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="calculated_unit-selection"
                  >
                    Unit
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="calculated_unit-selection"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="calculated_decimal-precision"
                  >
                    Decimal precision
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="calculated_decimal-precision"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="iot--card-edit-form--footer"
            >
              <button
                className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Open JSON editor
                <svg
                  aria-hidden={true}
                  className="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M31 16L24 23 22.59 21.59 28.17 16 22.59 10.41 24 9 31 16zM1 16L8 9 9.41 10.41 3.83 16 9.41 21.59 8 23 1 16z"
                  />
                  <path
                    d="M5.91 15H26.080000000000002V17H5.91z"
                    transform="rotate(-75 15.996 16)"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor for TimeSeries 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "calc(100vh - 6rem)",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="iot--card-editor"
      >
        <div
          className="iot--card-editor--header"
        >
          <button
            className="gallery-button iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Add card
            <svg
              aria-hidden={true}
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v2H2V2h2zm1-1H1v4h4V1zM9 2v2H7V2h2zm1-1H6v4h4V1zM14 2v2h-2V2h2zm1-1h-4v4h4V1zM4 7v2H2V7h2zm1-1H1v4h4V6zM9 7v2H7V7h2zm1-1H6v4h4V6zM14 7v2h-2V7h2zm1-1h-4v4h4V6zM4 12v2H2v-2h2zm1-1H1v4h4v-4zM9 12v2H7v-2h2zm1-1H6v4h4v-4zM14 12v2h-2v-2h2zm1-1h-4v4h4v-4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="iot--card-editor--content"
        >
          <div
            className="iot--card-edit-form"
          >
            <div
              className="bx--tabs"
              role="navigation"
              selected={0}
            >
              <div
                aria-label="listbox"
                className="bx--tabs-trigger"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="listbox"
                tabIndex={0}
              >
                <a
                  className="bx--tabs-trigger-text"
                  href="#"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  Content
                </a>
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    show menu options
                  </title>
                </svg>
              </div>
              <ul
                className="bx--tabs__nav bx--tabs__nav--hidden"
                role="tablist"
              >
                <li
                  aria-controls="undefined__panel"
                  aria-selected={true}
                  className="bx--tabs__nav-item bx--tabs__nav-item--selected"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={0}
                  >
                    Content
                  </a>
                </li>
                <li
                  aria-controls="undefined__panel"
                  aria-selected={false}
                  className="bx--tabs__nav-item"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="tab"
                  tabIndex={-1}
                >
                  <a
                    className="bx--tabs__nav-link"
                    href="#"
                    tabIndex={-1}
                  >
                    Settings
                  </a>
                </li>
              </ul>
            </div>
            <div
              aria-hidden={false}
              className="bx--tab-content"
              hidden={false}
              role="tabpanel"
              selected={true}
            >
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="timeseries_title"
                  >
                    Card title
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="timeseries_title"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                        value="time-series-card"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item"
                >
                  <label
                    className="bx--label"
                    htmlFor="timeseries_description"
                  >
                    Description (Optional)
                  </label>
                  <div
                    className="bx--text-area__wrapper"
                    data-invalid={null}
                  >
                    <textarea
                      aria-describedby={null}
                      aria-invalid={null}
                      className="bx--text-area bx--text-area--light"
                      cols={50}
                      disabled={false}
                      id="timeseries_description"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder=""
                      rows={4}
                    />
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--dropdown__wrapper bx--list-box__wrapper"
                >
                  <label
                    className="bx--label"
                    htmlFor="downshift-1-toggle-button"
                    id="downshift-1-label"
                  >
                    Size
                  </label>
                  <div
                    className="bx--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                    id="timeseries_size"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    <button
                      aria-disabled={false}
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-1-label downshift-1-toggle-button"
                      className="bx--list-box__field"
                      disabled={false}
                      id="downshift-1-toggle-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      <span
                        className="bx--list-box__label"
                      >
                        Medium wide (8x2)
                      </span>
                      <div
                        className="bx--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height={16}
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <div
                      aria-labelledby="downshift-1-label"
                      className="bx--list-box__menu"
                      id="downshift-1-menu"
                      onBlur={[Function]}
                      onKeyDown={[Function]}
                      onMouseLeave={[Function]}
                      role="listbox"
                      tabIndex={-1}
                    />
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--dropdown__wrapper bx--list-box__wrapper"
                >
                  <label
                    className="bx--label"
                    htmlFor="downshift-2-toggle-button"
                    id="downshift-2-label"
                  >
                    Time range
                  </label>
                  <div
                    className="bx--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                    id="timeseries_time_range"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    <button
                      aria-disabled={false}
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-2-label downshift-2-toggle-button"
                      className="bx--list-box__field"
                      disabled={false}
                      id="downshift-2-toggle-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      <span
                        className="bx--list-box__label"
                      >
                        Select a time range
                      </span>
                      <div
                        className="bx--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height={16}
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <div
                      aria-labelledby="downshift-2-label"
                      className="bx--list-box__menu"
                      id="downshift-2-menu"
                      onBlur={[Function]}
                      onKeyDown={[Function]}
                      onMouseLeave={[Function]}
                      role="listbox"
                      tabIndex={-1}
                    />
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--form-section"
              >
                Data series
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--multi-select__wrapper bx--list-box__wrapper"
                >
                  <label
                    className="bx--label"
                    htmlFor="downshift-3-toggle-button"
                    id="downshift-3-label"
                  >
                    Data item
                  </label>
                  <div
                    className="bx--multi-select bx--list-box bx--list-box--light"
                    id="timeseries_dataSourceIds"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    <button
                      aria-disabled={false}
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-3-label downshift-3-toggle-button"
                      className="bx--list-box__field"
                      disabled={false}
                      id="downshift-3-toggle-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      <span
                        className="bx--list-box__label"
                        id="multiselect-field-label-1"
                      >
                        Select data items
                      </span>
                      <div
                        className="bx--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height={16}
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <div
                      aria-labelledby="downshift-3-label"
                      aria-multiselectable="true"
                      className="bx--list-box__menu"
                      id="downshift-3-menu"
                      onBlur={[Function]}
                      onKeyDown={[Function]}
                      onMouseLeave={[Function]}
                      role="listbox"
                      tabIndex={-1}
                    />
                  </div>
                </div>
              </div>
              <div
                className="iot--list"
              >
                <div
                  className="iot--list-header-container"
                />
                <div
                  className="iot--list--content"
                >
                  <div
                    className="iot--list-item-parent"
                    data-floating-menu-container={true}
                  >
                    <div
                      className="iot--list-item"
                    >
                      <div
                        className="iot--list-item--content"
                      >
                        <div
                          className="iot--list-item--content--icon iot--list-item--content--icon__left"
                        >
                          <div
                            style={
                              Object {
                                "backgroundColor": "#6929c4",
                                "height": "1rem",
                                "width": "1rem",
                              }
                            }
                          />
                        </div>
                        <div
                          className="iot--list-item--content--values"
                        >
                          <div
                            className="iot--list-item--content--values--main"
                          >
                            <div
                              className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                              title="Torque Max"
                            >
                              Torque Max
                            </div>
                            <div
                              className="iot--list-item--content--row-actions"
                            >
                              <button
                                className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                                disabled={false}
                                onClick={[Function]}
                                tabIndex={0}
                                type="button"
                              >
                                <span
                                  className="bx--assistive-text"
                                >
                                  Edit
                                </span>
                                <svg
                                  aria-hidden="true"
                                  aria-label="Edit"
                                  className="bx--btn__icon"
                                  fill="currentColor"
                                  focusable="false"
                                  height={16}
                                  preserveAspectRatio="xMidYMid meet"
                                  role="img"
                                  viewBox="0 0 32 32"
                                  width={16}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="iot--list-item-parent"
                    data-floating-menu-container={true}
                  >
                    <div
                      className="iot--list-item"
                    >
                      <div
                        className="iot--list-item--content"
                      >
                        <div
                          className="iot--list-item--content--icon iot--list-item--content--icon__left"
                        >
                          <div
                            style={
                              Object {
                                "backgroundColor": "#1192e8",
                                "height": "1rem",
                                "width": "1rem",
                              }
                            }
                          />
                        </div>
                        <div
                          className="iot--list-item--content--values"
                        >
                          <div
                            className="iot--list-item--content--values--main"
                          >
                            <div
                              className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                              title="Torque Mean"
                            >
                              Torque Mean
                            </div>
                            <div
                              className="iot--list-item--content--row-actions"
                            >
                              <button
                                className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                                disabled={false}
                                onClick={[Function]}
                                tabIndex={0}
                                type="button"
                              >
                                <span
                                  className="bx--assistive-text"
                                >
                                  Edit
                                </span>
                                <svg
                                  aria-hidden="true"
                                  aria-label="Edit"
                                  className="bx--btn__icon"
                                  fill="currentColor"
                                  focusable="false"
                                  height={16}
                                  preserveAspectRatio="xMidYMid meet"
                                  role="img"
                                  viewBox="0 0 32 32"
                                  width={16}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-hidden={true}
              className="bx--tab-content"
              hidden={true}
              role="tabpanel"
              selected={false}
            >
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="timeseries_title"
                  >
                    X-axis label
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="timeseries_title"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                        value="Time"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="timeseries_y-axis-label"
                  >
                    Y-axis label
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="timeseries_y-axis-label"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                        value="Temperature"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="timeseries_unit-selection"
                  >
                    Unit
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="timeseries_unit-selection"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                        value="˚F"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="timeseries_decimal-precision"
                  >
                    Decimal precision
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="timeseries_decimal-precision"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="iot--card-edit-form--footer"
            >
              <button
                className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Open JSON editor
                <svg
                  aria-hidden={true}
                  className="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M31 16L24 23 22.59 21.59 28.17 16 22.59 10.41 24 9 31 16zM1 16L8 9 9.41 10.41 3.83 16 9.41 21.59 8 23 1 16z"
                  />
                  <path
                    d="M5.91 15H26.080000000000002V17H5.91z"
                    transform="rotate(-75 15.996 16)"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor interactive 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <pre>
          {
    "title": "New card",
    "size": "SMALL",
    "type": "VALUE",
    "id": "card-1"
}
        </pre>
      </div>
      <div
        style={
          Object {
            "height": "calc(100vh - 6rem)",
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <div
          className="iot--card-editor"
        >
          <div
            className="iot--card-editor--header"
          >
            <button
              className="gallery-button iot--btn bx--btn bx--btn--sm bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Add card
              <svg
                aria-hidden={true}
                className="bx--btn__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 2v2H2V2h2zm1-1H1v4h4V1zM9 2v2H7V2h2zm1-1H6v4h4V1zM14 2v2h-2V2h2zm1-1h-4v4h4V1zM4 7v2H2V7h2zm1-1H1v4h4V6zM9 7v2H7V7h2zm1-1H6v4h4V6zM14 7v2h-2V7h2zm1-1h-4v4h4V6zM4 12v2H2v-2h2zm1-1H1v4h4v-4zM9 12v2H7v-2h2zm1-1H6v4h4v-4zM14 12v2h-2v-2h2zm1-1h-4v4h4v-4z"
                />
              </svg>
            </button>
          </div>
          <div
            className="iot--card-editor--content"
          >
            <div
              className="iot--card-edit-form"
            >
              <div
                className="bx--tabs"
                role="navigation"
                selected={0}
              >
                <div
                  aria-label="listbox"
                  className="bx--tabs-trigger"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="listbox"
                  tabIndex={0}
                >
                  <a
                    className="bx--tabs-trigger-text"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    Content
                  </a>
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title>
                      show menu options
                    </title>
                  </svg>
                </div>
                <ul
                  className="bx--tabs__nav bx--tabs__nav--hidden"
                  role="tablist"
                >
                  <li
                    aria-controls="undefined__panel"
                    aria-selected={true}
                    className="bx--tabs__nav-item bx--tabs__nav-item--selected"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    tabIndex={-1}
                  >
                    <a
                      className="bx--tabs__nav-link"
                      href="#"
                      tabIndex={0}
                    >
                      Content
                    </a>
                  </li>
                  <li
                    aria-controls="undefined__panel"
                    aria-selected={false}
                    className="bx--tabs__nav-item"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    tabIndex={-1}
                  >
                    <a
                      className="bx--tabs__nav-link"
                      href="#"
                      tabIndex={-1}
                    >
                      Settings
                    </a>
                  </li>
                </ul>
              </div>
              <div
                aria-hidden={false}
                className="bx--tab-content"
                hidden={false}
                role="tabpanel"
                selected={true}
              >
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                  >
                    <label
                      className="bx--label"
                      htmlFor="card-1_title"
                    >
                      Card title
                    </label>
                    <div
                      className="bx--text-input__field-outer-wrapper"
                    >
                      <div
                        className="bx--text-input__field-wrapper"
                        data-invalid={null}
                        data-warn={null}
                      >
                        <input
                          className="bx--text-input bx--text__input bx--text-input--light"
                          disabled={false}
                          id="card-1_title"
                          onChange={[Function]}
                          onClick={[Function]}
                          type="text"
                          value="New card"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--form-item"
                  >
                    <label
                      className="bx--label"
                      htmlFor="card-1_description"
                    >
                      Description (Optional)
                    </label>
                    <div
                      className="bx--text-area__wrapper"
                      data-invalid={null}
                    >
                      <textarea
                        aria-describedby={null}
                        aria-invalid={null}
                        className="bx--text-area bx--text-area--light"
                        cols={50}
                        disabled={false}
                        id="card-1_description"
                        onChange={[Function]}
                        onClick={[Function]}
                        placeholder=""
                        rows={4}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--dropdown__wrapper bx--list-box__wrapper"
                  >
                    <label
                      className="bx--label"
                      htmlFor="downshift-4-toggle-button"
                      id="downshift-4-label"
                    >
                      Size
                    </label>
                    <div
                      className="bx--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                      id="card-1_size"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                    >
                      <button
                        aria-disabled={false}
                        aria-expanded={false}
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-4-label downshift-4-toggle-button"
                        className="bx--list-box__field"
                        disabled={false}
                        id="downshift-4-toggle-button"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        <span
                          className="bx--list-box__label"
                        >
                          Small (4x1)
                        </span>
                        <div
                          className="bx--list-box__menu-icon"
                        >
                          <svg
                            aria-label="Open menu"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            name="chevron--down"
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                            <title>
                              Open menu
                            </title>
                          </svg>
                        </div>
                      </button>
                      <div
                        aria-labelledby="downshift-4-label"
                        className="bx--list-box__menu"
                        id="downshift-4-menu"
                        onBlur={[Function]}
                        onKeyDown={[Function]}
                        onMouseLeave={[Function]}
                        role="listbox"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-hidden={true}
                className="bx--tab-content"
                hidden={true}
                role="tabpanel"
                selected={false}
              >
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                  >
                    <label
                      className="bx--label"
                      htmlFor="card-1_title"
                    >
                      X-axis label
                    </label>
                    <div
                      className="bx--text-input__field-outer-wrapper"
                    >
                      <div
                        className="bx--text-input__field-wrapper"
                        data-invalid={null}
                        data-warn={null}
                      >
                        <input
                          className="bx--text-input bx--text__input bx--text-input--light"
                          disabled={false}
                          id="card-1_title"
                          onChange={[Function]}
                          onClick={[Function]}
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                  >
                    <label
                      className="bx--label"
                      htmlFor="card-1_y-axis-label"
                    >
                      Y-axis label
                    </label>
                    <div
                      className="bx--text-input__field-outer-wrapper"
                    >
                      <div
                        className="bx--text-input__field-wrapper"
                        data-invalid={null}
                        data-warn={null}
                      >
                        <input
                          className="bx--text-input bx--text__input bx--text-input--light"
                          disabled={false}
                          id="card-1_y-axis-label"
                          onChange={[Function]}
                          onClick={[Function]}
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                  >
                    <label
                      className="bx--label"
                      htmlFor="card-1_unit-selection"
                    >
                      Unit
                    </label>
                    <div
                      className="bx--text-input__field-outer-wrapper"
                    >
                      <div
                        className="bx--text-input__field-wrapper"
                        data-invalid={null}
                        data-warn={null}
                      >
                        <input
                          className="bx--text-input bx--text__input bx--text-input--light"
                          disabled={false}
                          id="card-1_unit-selection"
                          onChange={[Function]}
                          onClick={[Function]}
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                  >
                    <label
                      className="bx--label"
                      htmlFor="card-1_decimal-precision"
                    >
                      Decimal precision
                    </label>
                    <div
                      className="bx--text-input__field-outer-wrapper"
                    >
                      <div
                        className="bx--text-input__field-wrapper"
                        data-invalid={null}
                        data-warn={null}
                      >
                        <input
                          className="bx--text-input bx--text__input bx--text-input--light"
                          disabled={false}
                          id="card-1_decimal-precision"
                          onChange={[Function]}
                          onClick={[Function]}
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--footer"
              >
                <button
                  className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  Open JSON editor
                  <svg
                    aria-hidden={true}
                    className="bx--btn__icon"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M31 16L24 23 22.59 21.59 28.17 16 22.59 10.41 24 9 31 16zM1 16L8 9 9.41 10.41 3.83 16 9.41 21.59 8 23 1 16z"
                    />
                    <path
                      d="M5.91 15H26.080000000000002V17H5.91z"
                      transform="rotate(-75 15.996 16)"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor with no card defined (gallery view) 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "calc(100vh - 6rem)",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="iot--card-editor"
      >
        <div
          className="iot--card-editor--content"
        >
          <div
            className="iot--list iot--list__full-height"
          >
            <div
              className="iot--list-header-container"
            >
              <div
                className="iot--list-header"
              >
                <div
                  className="iot--list-header--title"
                >
                  Gallery
                </div>
                <div
                  className="iot--list-header--btn-container"
                />
              </div>
              <div
                className="iot--list-header--search"
              >
                <div
                  aria-labelledby="iot--list-header--search-search"
                  className="bx--search bx--search--sm"
                  role="search"
                >
                  <svg
                    aria-hidden={true}
                    className="bx--search-magnifier"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5	C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                    />
                  </svg>
                  <label
                    className="bx--label"
                    htmlFor="iot--list-header--search"
                    id="iot--list-header--search-search"
                  >
                    Enter a value
                  </label>
                  <input
                    autoComplete="off"
                    className="bx--search-input"
                    id="iot--list-header--search"
                    onChange={[Function]}
                    placeholder="Enter a value"
                    role="searchbox"
                    type="text"
                    value=""
                  />
                  <button
                    aria-label="Clear search input"
                    className="bx--search-close bx--search-close--hidden"
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="currentColor"
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="iot--list--content__full-height iot--list--content"
            >
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        height={32}
                        width={40}
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                        >
                          <path
                            d="M.5.5h38.752v31H.5z"
                            stroke="#2160F8"
                          />
                          <path
                            d="M4.969 21.714h21.863v4.571H4.969zm26.832 0l1.988 4.572h-3.975z"
                            fill="#8EC1FF"
                          />
                          <text
                            fill="#2160F8"
                            fontFamily="IBMPlexSans, IBM Plex Sans"
                            fontSize={10}
                          >
                            <tspan
                              x={4.969}
                              y={15.5}
                            >
                              25%
                            </tspan>
                          </text>
                        </g>
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Value / KPI"
                        >
                          Value / KPI
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        height={34}
                        width={40}
                      >
                        <g
                          fill="none"
                          fillRule="nonzero"
                          transform="translate(0 1)"
                        >
                          <path
                            d="M20.556 1.233L32.28 7.368l.033.013 7.299 1.68v-.453l-7.193-1.675L20.376.63 7.546 30.883.519 28.516l-.002.483 7.23 2.436z"
                            fill="#0062FF"
                          />
                          <circle
                            cx={7.382}
                            cy={31.154}
                            fill="#FFF"
                            r={1}
                            stroke="#0062FF"
                            strokeWidth={1.5}
                          />
                          <circle
                            cx={20.455}
                            cy={0.966}
                            fill="#FFF"
                            r={1}
                            stroke="#0062FF"
                            strokeWidth={1.5}
                          />
                          <circle
                            cx={32.904}
                            cy={7.365}
                            fill="#FFF"
                            r={1}
                            stroke="#0062FF"
                            strokeWidth={1.5}
                          />
                          <path
                            d="M.13 13.592h.776v-.155H.13zM1.424 13.592H2.2v-.155h-.777zM2.718 13.592h.777v-.155h-.777zM4.013 13.592h.777v-.155h-.777zM5.307 13.592h.777v-.155h-.777zM6.602 13.592h.777v-.155h-.777zM7.896 13.592h.777v-.155h-.777zM9.19 13.592h.778v-.155H9.19zM10.485 13.592h.777v-.155h-.777zM11.78 13.592h.777v-.155h-.777zM13.074 13.592h.777v-.155h-.777zM14.369 13.592h.777v-.155h-.777zM15.663 13.592h.777v-.155h-.777zM16.958 13.592h.777v-.155h-.777zM18.252 13.592h.777v-.155h-.777zM19.547 13.592h.777v-.155h-.777zM20.841 13.592h.777v-.155h-.777zM22.136 13.592h.777v-.155h-.777zM23.43 13.592h.777v-.155h-.777zM24.725 13.592h.777v-.155h-.777zM26.02 13.592h.776v-.155h-.777zM27.314 13.592h.777v-.155h-.777zM28.608 13.592h.777v-.155h-.777zM29.903 13.592h.777v-.155h-.777zM31.197 13.592h.777v-.155h-.777zM32.492 13.592h.777v-.155h-.777zM33.786 13.592h.777v-.155h-.777zM35.08 13.592h.778v-.155h-.777zM36.375 13.592h.777v-.155h-.777zM37.67 13.592h.777v-.155h-.777zM38.964 13.592h.389v-.155h-.389z"
                            fill="#0062FF"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Time series line"
                        >
                          Time series line
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        height={32}
                        width={40}
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                        >
                          <path
                            d="M1.29 21.57L13 10.477l11.2 12.347L30.5 16l8.21 9.6"
                            stroke="#0062FF"
                          />
                          <ellipse
                            cx={25.835}
                            cy={7.62}
                            rx={3.19}
                            ry={3.5}
                            stroke="#005BFF"
                          />
                          <path
                            d="M.5.5h39v31H.5z"
                            stroke="#2160F8"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Image"
                        >
                          Image
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        height={32}
                        width={40}
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                        >
                          <path
                            d="M0 0h40v2.759H0z"
                            fill="#0058FF"
                          />
                          <path
                            d="M.5 3.259h39V31.5H.5z"
                            stroke="#005BFF"
                          />
                          <path
                            d="M3.5 6.621h19V9.38h-19zm21.5 0h11V9.38H25zM3.5 18.759h19v2.759h-19zm21.5 0h11v2.759H25zM3.5 12.69h19v2.759h-19zm21.5 0h11v2.759H25zM3.5 24.828h19v2.759h-19zm21.5 0h11v2.759H25z"
                            fill="#D8D8D8"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Data table"
                        >
                          Data table
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        height={32}
                        width={40}
                      >
                        <path
                          d="M0 0h1.111v32H0zm31.111 2.963h1.111V32h-1.111zM7.778 19.259h1.111V32H7.778zm7.778-7.407h1.111V32h-1.111zM38.889 26.37H40V32h-1.111zM23.333 14.222h1.111V32h-1.111z"
                          fill="#0062FF"
                        />
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Simple bar"
                        >
                          Simple bar
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        height={32}
                        width={40}
                      >
                        <g
                          fill="none"
                        >
                          <path
                            d="M38.926 7.822H40V32h-1.074z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M37.584 17.422h1.074V32h-1.074z"
                            fill="#0062FF"
                          />
                          <path
                            d="M31.41 3.2h1.073V32H31.41z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M30.067 9.956h1.074V32h-1.074z"
                            fill="#0062FF"
                          />
                          <path
                            d="M23.893 14.578h1.073V32h-1.073z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M22.55 21.333h1.074V32H22.55z"
                            fill="#0062FF"
                          />
                          <path
                            d="M16.644 12.089h1.074V32h-1.074z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M15.302 25.6h1.074V32h-1.074z"
                            fill="#0062FF"
                          />
                          <path
                            d="M8.86 20.267h1.073V32H8.859z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M7.517 23.111h1.074V32H7.517z"
                            fill="#0062FF"
                          />
                          <path
                            d="M1.342 0h1.074v32H1.342z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M0 14.222h1.074V32H0z"
                            fill="#0062FF"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Grouped bar"
                        >
                          Grouped bar
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        height={32}
                        width={40}
                      >
                        <g
                          fill="none"
                        >
                          <path
                            d="M38.108 7.467H40v24.178h-1.892z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M38.108 17.067H40v14.578h-1.892z"
                            fill="#0062FF"
                          />
                          <path
                            d="M38.108 16.711H40v1h-1.892z"
                            fill="#FFF"
                          />
                          <path
                            d="M30.27 2.844h1.892v28.8H30.27z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M30.27 9.956h1.892V32H30.27z"
                            fill="#0062FF"
                          />
                          <path
                            d="M30.27 9.6h1.892v1H30.27z"
                            fill="#FFF"
                          />
                          <path
                            d="M22.703 14.578h1.892V32h-1.892z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M22.703 21.333h1.892V32h-1.892z"
                            fill="#0062FF"
                          />
                          <path
                            d="M22.703 20.978h1.892v1h-1.892z"
                            fill="#FFF"
                          />
                          <path
                            d="M15.405 12.089h1.892V32h-1.892z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M15.405 25.6h1.892V32h-1.892z"
                            fill="#0062FF"
                          />
                          <path
                            d="M15.405 25.244h1.892v1h-1.892z"
                            fill="#FFF"
                          />
                          <path
                            d="M7.838 20.267H9.73V32H7.838z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M7.838 23.111H9.73V32H7.838z"
                            fill="#0062FF"
                          />
                          <path
                            d="M7.838 22.756H9.73v1H7.838z"
                            fill="#FFF"
                          />
                          <path
                            d="M0 0h1.892v32H0z"
                            fill="#97C1FF"
                          />
                          <path
                            d="M0 14.222h1.892V32H0z"
                            fill="#0062FF"
                          />
                          <path
                            d="M0 13.867h1.892v1H0z"
                            fill="#FFF"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Stacked bar"
                        >
                          Stacked bar
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
